Rename tabs on page 'processEdit'

--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -832,6 +832,7 @@ technischerHintergrund=Technical background
 # technischerHintergrundTextDemo is used in kitodo_config.properties
 technischerHintergrundTextDemo=With the help of Kitodo it will be easier to collect and edit the different information of the journals. This affects the generation of the general metadata and the hierarchical structural data of the volumes and also concerns the matching of logical (printed) and physical page numbers. Metadata from different sources are to be imported on the basis of an XML format. Via a WebDAV server
 templateProperty=template property
+templateProperties=Template properties
 tifheaderdocumentname=Tiff header document name
 tifheaderimagedescription=Tiff header image description
 timeZone.+01\:00=CET
@@ -910,6 +911,7 @@ wirklichAusfuehren=Are you sure you want to execute?
 workflow=Workflow
 workflows=Workflows
 working=Working
+workpieceProperties=Worpiece properties
 year=year
 years=years
 yes=yes
