--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -833,6 +833,7 @@ technischerHintergrund=Technischer Hintergrund
 # technischerHintergrundTextDemo is used in kitodo_config.properties
 technischerHintergrundTextDemo=Mit Hilfe von Kitodo soll es m\u00F6glich sein, verschiedene Informationen zu Werken komfortabel erfassen und bearbeiten zu k\u00F6nnen. Dies betrifft neben den allgemeinen Metadaten ebenso die hierarchischen Strukturdaten der B\u00E4nde sowie das Matching von logischen (aufgedruckten) und physikalischen (tats\u00E4chlichen) Seitenzahlen. Zus\u00E4tzlich m\u00FCssen au\u00DFerdem Metadaten aus unterschiedlichen Quellen auf der Basis des Dateiformates XML importiert werden k\u00F6nnen. \u00FCber einen WebDAV-Server ist Kitodo unter anderem in der Lage, auf entfernte Dateisysteme mit deren Daten lesend und schreibend zuzugreifen (z.B. f\u00FCr die Qualit\u00E4tskontrolle oder die Bearbeitung der gescannten Images). Des weiteren sind Komponenten f\u00FCr ein verteiltes Workflowmanagement integriert, um die Verwaltung einer verteilten Produktion und Kommunikation zwischen den Partnern zu gew\u00E4hrleisten. Somit wird es f\u00FCr jeden Projektpartner jederzeit m\u00F6glich sein, den Status der Teilschritte des Workflows f\u00FCr einzelne Werke detailliert einzusehen. Um diese dezentrale Arbeitsteilung zu erm\u00F6glichen, wurde Kitodo als Webapplikation realisiert. Somit ist der Zugriff auch von verteilten Standorten problemlos m\u00F6glich. Durch den konsequenten Einsatz von Java-Technologie wird neben der Plattformunabh\u00E4ngigkeit dar\u00FCber hinaus sichergestellt, dass mittels der Unicode-Kodierung sowohl west- als auch osteurop\u00E4ische Zeichens\u00E4tze (inkl. kyrillisch) innerhalb des Tools Verwendung finden k\u00F6nnen.
 templateProperty=Vorlageneigenschaft
+templateProperties=Vorlageneigenschaften
 tifheaderdocumentname=Tif-Header Documentname
 tifheaderimagedescription=Tif-Header Image-Beschreibung
 timeZone.+01\:00=MEZ
@@ -911,6 +912,7 @@ wirklichAusfuehren=M\u00F6chten Sie wirklich diesen Schritt ausf\u00FChren?
 workflow=Workflow
 workflows=Workflows
 working=L\u00E4uft
+workpieceProperties=Werkst\u00FCckeigenschaften
 year=Jahr
 years=Jahre
 yes=Ja
