Rename new templates according to implicit naming convention established by other new templates

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -321,7 +321,7 @@ dmsImportSuccessPfad=DMS-Export-Success-Ordner
 docket=Laufzettel
 docketMissing=Die Konfigurationsdatei zur Laufzettelgenerierung existiert nicht
 dockets=Laufzettel
-# docketSaving is used in editDocket.xhtml - line 41
+# docketSaving is used in docketEdit.xhtml - line 45
 docketSaving=Laufzettel wird gespeichert...
 docstructAnAndereStelleSchieben=Strukturelement an andere Stelle schieben
 docstructNachObenSchieben=Strukturelement nach oben schieben
