--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -321,7 +321,7 @@ dmsImportSuccessPfad=DMS import success path
 docket=Docket
 docketMissing=the configuration file for docket createion is missing
 dockets=Dockets
-# docketSaving is used in editDocket.xhtml - line 41
+# docketSaving is used in docketEdit.xhtml - line 45
 docketSaving=Saving docket...
 docstructAnAndereStelleSchieben=Move docstruct to other location
 docstructNachObenSchieben=Move docstruct up
