Fix some quirks in client page templates

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -621,6 +621,7 @@ newProcess.catalogueSearch.previousPage=Zur\u00fcck
 newProcess.catalogueSearch.results=Ihre Suche erzielte {0} Treffer:
 newProject=Neues Projekt
 nextStep=Was m\u00F6chten Sie als n\u00E4chstes tun?
+newClient=Neuer Mandant
 newElement=Neu
 newRuleSet=Neuer Regelsatz
 newProcessTemplate=Neue Produktionsvorlage
