--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -621,6 +621,7 @@ newProcess.catalogueSearch.previousPage=Backwards
 newProcess.catalogueSearch.results=Your search achieved {0} results\:
 newProject=New project
 nextStep=What do you want to do next?
+newClient=New client
 newElement=New
 newRuleSet=New rule set
 newProcessTemplate=New process template
