Add hitlist popup for opac search

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -461,6 +461,7 @@ hideCorrectionTasks=Entferne Korrekturschritte
 hilfeZumFilter=Hilfe zum Filter
 hinterDasAktuelleElement=Hinter das aktuelle Element
 history=History
+hitlist=Trefferliste
 homeVerzeichnis=Homeverzeichnis
 id=ID
 idImport=ID Import
@@ -614,7 +615,7 @@ newProcess.catalogueSearch.heading=Katalogsuche
 newProcess.catalogueSearch.leaveDisplay=Zur\u00fcck
 newProcess.catalogueSearch.nextPage=Weiter
 newProcess.catalogueSearch.previousPage=Zur\u00fcck
-newProcess.catalogueSearch.results=Ihre Suche erzielte {0} Treffer:
+newProcess.catalogueSearch.results=Ihre Suche erzielte {0} Treffer
 newProject=Neues Projekt
 nextStep=Was m\u00F6chten Sie als n\u00E4chstes tun?
 newClient=Neuer Mandant
@@ -753,6 +754,7 @@ scriptAusfuehren=Skript ausf\u00FChren
 scriptname=Skriptname
 scriptpath=Skriptpfad
 scriptTask=Skript-Schritt
+searchingOpac=Durchsuche OPAC...
 searchPlaceholder=Suche nach Projekten, Vorg\u00E4ngen, Aufgaben oder Benutzern
 seitenVonUnterelementenZuweisen=Seiten von Unterelementen zuweisen
 seitenZuweisen=Seiten zuweisen
