--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -460,6 +460,7 @@ hideCorrectionTasks=remove correction steps
 hilfeZumFilter=Help for filter
 hinterDasAktuelleElement=Behind current element
 history=History
+hitlist=Hitlist
 homeVerzeichnis=Home directory
 id=ID
 idImport=ID import
@@ -614,7 +615,7 @@ newProcess.catalogueSearch.heading=Catalogue search
 newProcess.catalogueSearch.leaveDisplay=Cancel
 newProcess.catalogueSearch.nextPage=Continue
 newProcess.catalogueSearch.previousPage=Backwards
-newProcess.catalogueSearch.results=Your search achieved {0} results\:
+newProcess.catalogueSearch.results=Your search achieved {0} results
 newProject=New project
 nextStep=What do you want to do next?
 newClient=New client
@@ -752,6 +753,7 @@ scriptAusfuehren=Execute script
 scriptname=Script name
 scriptpath=Script path
 scriptTask=Script task
+searchingOpac=Searching OPAC...
 searchPlaceholder=Search for projects, processes, tasks or users
 seitenVonUnterelementenZuweisen=Assign pages of subelements
 seitenZuweisen=Assign pages
