Do not show 'saving process' message when validation errors occur

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -477,6 +477,7 @@ imagesGesamt=Images gesamt
 imagesLesen=Images lesen
 imagesSchreiben=Images schreiben
 importedBatchLabel=Importiert aus {0}, {1} Uhr
+importingData=Daten werden importiert...
 importDms=Export in das DMS
 importFailedError=Der Import von {0} ist fehlgeschlagen. Die Fehlermeldung lautet\: {1}.
 importFiles=Dateien importieren
