--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -480,6 +480,7 @@ importFailedError=The import of {0} failed. The error message is\: {1}
 importFiles=Import files
 importMittelsFileUpload=Import by file upload
 importedBatchLabel=Imported from {0}, {1}
+importingData=Importing data...
 importplugin=import Plugin
 impressum=Legal notice
 # impressumTextDemo is used in kitodo_config.properties
