Update buttons on OPAC import tab

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -651,7 +651,6 @@ nurOffeneAufgabenAnzeigen=Nur offene Aufgaben anzeigen
 objectType=Objekttyp
 ocr=OCR
 oderSperrungAufheben=Oder heben Sie die Sperrung hier auf.
-opacAbfragen=Opac abfragen
 openSteps=Offene Schritte
 orLast=oder letzte
 orderNumber=Sortiernummer
@@ -719,6 +718,7 @@ prozessvorlageMitUnvollstaendigenSchrittdetails=Diese Vorgangsvorlage enth\u00E4
 prozessvorlagen=Produktionsvorlagen
 quarter=Quartal
 quarters=Quartale
+queryOPAC=OPAC abfragen
 recordImport=Datensatz-Import
 records=Datens\u00E4tze
 refCurve=Sollkurve
@@ -756,6 +756,7 @@ scriptname=Skriptname
 scriptpath=Skriptpfad
 scriptTask=Skript-Schritt
 searchingOpac=Durchsuche OPAC...
+searchOPAC=OPAC durchsuchen
 searchPlaceholder=Suche nach Projekten, Vorg\u00E4ngen, Aufgaben oder Benutzern
 seitenVonUnterelementenZuweisen=Seiten von Unterelementen zuweisen
 seitenZuweisen=Seiten zuweisen
@@ -812,7 +813,6 @@ strukturelementHinzufuegen=Strukturelement hinzuf\u00FCgen
 strukturelementLoeschen=Strukturelement l\u00F6schen
 strukturelementVerschiebenErlaeuterung=W\u00E4hlen Sie nun die Stelle aus, an die das gew\u00E4hlte Strukturelement verschoben werden soll.
 suche=Suche
-sucheImOpac=Suche im Opac
 suffix=Suffix
 tabellengroesse=Tabellengr\u00F6\u00DFe
 table=Tabelle
