--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -651,7 +651,6 @@ nurOffeneAufgabenAnzeigen=Show open tasks only
 ocr=OCR
 objectType=Object type
 oderSperrungAufheben=Or unlock here.
-opacAbfragen=Request Opac
 openSteps=Open steps
 orLast=or last
 orderNumber=number sorting
@@ -718,6 +717,7 @@ prozessvorlageMitUnvollstaendigenSchrittdetails=This process template contains t
 prozessvorlagen=Process templates
 quarter=quarter
 quarters=quarters
+queryOPAC=Query OPAC
 recordImport=record import
 records=records
 refCurve=Reference curve
@@ -755,6 +755,7 @@ scriptname=Script name
 scriptpath=Script path
 scriptTask=Script task
 searchingOpac=Searching OPAC...
+searchOPAC=Search OPAC
 searchPlaceholder=Search for projects, processes, tasks or users
 seitenVonUnterelementenZuweisen=Assign pages of subelements
 seitenZuweisen=Assign pages
@@ -811,7 +812,6 @@ strukturelementHinzufuegen=Add docstruct
 strukturelementLoeschen=Delete docstruct
 strukturelementVerschiebenErlaeuterung=Please select the node where the selected docstruct should be pasted.
 suche=Search
-sucheImOpac=Search in Opac
 suffix=Suffix
 tabellengroesse=Table size
 table=Table
