Only validate 'processFromTemplate' form data when saving

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -683,7 +683,7 @@ processList=Vorgangsliste
 processProperties=Vorgangseigenschaft
 processTitleAllreadyInUse=Prozesstitel wird bereits verwendet.
 processesInThisBatch=Vorg\u00E4nge in diesem Batch
-processSaving=Prozess wird gespeichert...
+processSaving=Vorgang wird gespeichert...
 progress=Fortschritt
 project=Projekt
 projectAssociation=Projektzugeh\u00F6rigkeit
@@ -877,6 +877,7 @@ userGroupSaving=Benutzergruppe wird gespeichert
 userNotFound=Benutzer kann nicht ermittelt werden
 # userSaving is used in userEdit.xhtml - line 39
 userSaving=Benutzer wird gespeichert...
+validatingData=Daten werden validiert...
 validieren=Validieren
 value=Wert
 verlinkungDesBildesMitStrukturelement=Verlinkung des Bildes mit dem gew\u00E4hlten Strukturelement
