--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -876,6 +876,7 @@ userNotFound=User not found
 users=Users
 # userSaving is used in userEdit.xhtml - line 39
 userSaving=Saving user...
+validatingData=Validating data...
 validieren=Validate
 value=Value
 verlinkungDesBildesMitStrukturelement=Link the image with the selected structure element
