Set up basic HTML structure

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -389,6 +389,7 @@ folderUse.preview=Als Vorschau verwenden
 folderUse.preview.disabled=Vorschau deaktiviert
 formConfigurationMismatch=Unstimmige Formularkonfiguration\:
 from=von
+gallery=Galerie
 generate=Generieren
 gesamtesTrefferset=Gesamtes Trefferset
 gesamtesTreffersetInMeinHomeverzeichnis=Gesamtes Trefferset in mein Homeverzeichnis laden
@@ -628,6 +629,7 @@ order=Reihenfolge
 orderNumber=Sortiernummer
 page=Seite
 pages=Seiten
+pageStructure=Seitenstruktur
 pagination=Paginierung
 paginationEdit=Paginierung bearbeiten
 paginationFictitious=Fiktive Paginierung
