--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -387,6 +387,7 @@ folderUse.preview=Use as preview
 folderUse.preview.disabled=Preview disabled
 formConfigurationMismatch=Form configuration mismatch\:
 from=from
+gallery=Gallery
 generate=Generate
 gesamtesTrefferset=All hits
 gesamtesTreffersetInMeinHomeverzeichnis=Put all hits in my home directory
@@ -627,6 +628,7 @@ order=Order
 orderNumber=number sorting
 page=Page
 pages=Pages
+pageStructure=Page structure
 pagination=Pagination
 paginationEdit=Edit pagination
 paginationFictitious=Fictitious paginating
