Include metadata structure data include file into redesigned metadata base html structure

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -489,6 +489,7 @@ ldapGroupEdit=LDAP-Gruppe bearbeiten
 ldapGroupView=LDAP-Gruppe anzeigen
 ldapGroups=LDAP-Gruppen
 ldaplogin=LDAP login
+link=Verkn\u00FCpfung
 loadAllProcesses=Alle Vorg\u00E4nge laden
 loadAssociatedBatchOfProcess=Die enthaltenden Batches der gew\u00E4hlten Vorg\u00E4nge ausw\u00E4hlen
 loadProcessesOfBatch=Vorg\u00E4nge des/der ausgew\u00E4hlten Batches laden
@@ -549,6 +550,7 @@ metadataWithValue=mit dem Wert
 metadataView=Metadaten betrachten
 metadataShowImage=Bild anzeigen
 metadataSortByRuleset=Sortierung der Metadaten wie im Regelsatz (sonst alphabetisch)
+metadatenBearbeiten=Metadaten bearbeiten
 metsContentIDs=METS ContentIDs (physische Struktur)
 metsDigiprovPresentation=METS Digiprov Pr\u00E4sentation
 metsDigiprovPresentationAnchor=METS Digiprov Pr\u00E4sentation (Anker)
