--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -487,6 +487,7 @@ ldapGroupEdit=Edit LDAP group
 ldapGroupView=View LDAP group
 ldapGroups=LDAP groups
 ldaplogin=LDAP login
+link=Link
 loadAllProcesses=Load all processes
 loadAssociatedBatchOfProcess=Highlight the batches containing the chosen processes
 loadProcessesOfBatch=load processes of the selected batch
@@ -547,6 +548,7 @@ metadataWithValue=with the value
 metadataView=View metadata
 metadataShowImage=Show image
 metadataSortByRuleset=Order metadata as in ruleset (otherwise alphabetically)
+metadatenBearbeiten=Edit metadata
 metsContentIDs=METS ContentIDs (physical structure)
 metsDigiprovPresentation=METS Digiprov Presentation
 metsDigiprovPresentationAnchor=METS Digiprov Presentation (Anchor)
