--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -98,6 +98,8 @@ abgeschlosseneTasksAusListeEntfernen=Remove finished tasks
 addDemoTask=Add sample task
 addFilter=Add new filter to list
 addNewMetadataGroup=Add new metadata group
+addTemplateProperty=Add template property
+addWorkpieceProperty=Add workpiece property
 addToBatch=Added process to batch {0}.
 addToProcessLog=add to process log
 addToSelectedBatch=add selected processes to selected batch
@@ -279,6 +281,7 @@ count=Count
 createExcel=generate excel
 createNewBatchFromSelectedProcesses=create new batch of the selected processes
 createNewDocket=create new docket
+createNewProcessFromTemplate=Create process from template
 createPdf=create pdf
 createXML=Export logfile as XML file to home directory
 createdInUserHome=Folder created in user directory
@@ -825,8 +828,10 @@ technischeDaten=Technical data
 technischerHintergrund=Technical background
 # technischerHintergrundTextDemo is used in kitodo_config.properties
 technischerHintergrundTextDemo=With the help of Kitodo it will be easier to collect and edit the different information of the journals. This affects the generation of the general metadata and the hierarchical structural data of the volumes and also concerns the matching of logical (printed) and physical page numbers. Metadata from different sources are to be imported on the basis of an XML format. Via a WebDAV server
+templateDetails=Template details
 templateProperty=template property
 templateProperties=Template properties
+templateTitle=Template title
 tifheaderdocumentname=Tiff header document name
 tifheaderimagedescription=Tiff header image description
 timeZone.+01\:00=CET
@@ -906,7 +911,7 @@ wirklichAusfuehren=Are you sure you want to execute?
 workflow=Workflow
 workflows=Workflows
 working=Working
-workpieceProperties=Worpiece properties
+workpieceProperties=Workpiece properties
 year=year
 years=years
 yes=yes
