Change logger calls to setErrorMessage and resolve catch-all Exceptions

--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -247,6 +247,7 @@ calendar.upload.missingMandatoryElement=A mandatory XML element could not be fou
 calendar.upload.missingMandatoryValue=A mandatory value could not be found.
 calendar.upload.overlappingDateRanges=Due to overlapping date ranges of blocks, the course of appearance could not be imported\:
 calendar.upload.submit=Submit file
+cannotGetDigitalDocument=Can not get DigitalDocument
 citation.accessTimestamp=Accessed\:
 citation.containedIn=In\:
 citation.pages=Pages
