Unify usage of export canceled message

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -380,7 +380,7 @@ erweiterteEigenschaften=Erweiterte Eigenschaften
 esIstEinFehlerAufgetreten=Es ist ein Fehler aufgetreten
 exportBatch=Gesamten Batch ins DMS exportieren
 exportDMS=Export DMS
-exportError=Export abgebrochen, xml-LeseFehler bei\:
+exportError=Export abgebrochen, xml-LeseFehler bei Vorlage\: ''{0}''
 exportFiles=Dateien exportieren
 exportMets=Export der Metadaten als METS-Datei in das Homeverzeichnis
 exportPdf=Export der Images zusammen mit den Metadaten als PDF-Datei in das Homeverzeichnis
