--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -380,7 +380,7 @@ erweiterteEigenschaften=Special properties
 esIstEinFehlerAufgetreten=An error has occurred.
 exportBatch=Export batch to DMS
 exportDMS=Export DMS
-exportError=export canceled
+exportError=Export canceled for process\: ''{0}''
 exportFiles=Export files
 exportMets=Export metadata as METS file to home directory
 exportPdf=Export images with metadata as PDF file to home directory
