--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -364,6 +364,7 @@ error.TransformerException=Bei der Umwandlung in XML trat ein Fehler auf.
 errorAdding=Fehler beim Hinzuf\u00FCgen von ''{0}''
 errorCreating=Fehler beim Erzeugen einer neuen Instanz vom Typ ''{0}''
 errorDeleting=Fehler beim L\u00F6schen von ''{0}''
+errorDirectoryDeleting=Fehler beim L\u00F6schen von ''{0}'' Verzeichnis.
 errorExporting=Fehler beim Exportieren von ''{0}'' mit ID {1}
 errorLoadingMany=Fehler beim Laden von ''{0}''
 errorLoadingOne=Fehler beim Laden von ''{0}'' mit ID {1}
