--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -364,6 +364,7 @@ error.TransformerException=An exceptional condition occurred during the transfor
 errorAdding=Error adding ''{0}''
 errorCreating=Error creating new ''{0}''
 errorDeleting=Error deleting ''{0}''
+errorDirectoryDeleting=''{0}'' directory could not be deleted.
 errorExporting=Error exporting ''{0}'' with ID {1}
 errorLoadingMany=Error loading ''{0}''
 errorLoadingOne=Error loading ''{0}'' with ID {1}
