Unify message for error on reading database

--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -363,6 +363,7 @@ error.SAXException=Basic error while parsing the XML data. You may want to check
 error.TransformerException=An exceptional condition occurred during the transformation process to XML.
 errorAdding=Error adding ''{0}''
 errorCreating=Error creating new ''{0}''
+errorDatabaseReading=Error on reading database for ''{0}'' with ID {1}.
 errorDeleting=Error deleting ''{0}''
 errorDirectoryDeleting=''{0}'' directory could not be deleted.
 errorExporting=Error exporting ''{0}'' with ID {1}
