--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -363,6 +363,7 @@ error.SAXException=Die XML-Daten konnten nicht geparst werden. \u00DCberpr\u00FC
 error.TransformerException=Bei der Umwandlung in XML trat ein Fehler auf.
 errorAdding=Fehler beim Hinzuf\u00FCgen von ''{0}''
 errorCreating=Fehler beim Erzeugen einer neuen Instanz vom Typ ''{0}''
+errorDatabaseReading=Fehler beim Datenbanklesen von ''{0}'' with ID {1}.
 errorDeleting=Fehler beim L\u00F6schen von ''{0}''
 errorDirectoryDeleting=Fehler beim L\u00F6schen von ''{0}'' Verzeichnis.
 errorExporting=Fehler beim Exportieren von ''{0}'' mit ID {1}
