Unify message for error reading, especially for opac-config

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -369,6 +369,7 @@ errorDirectoryDeleting=Fehler beim L\u00F6schen von ''{0}'' Verzeichnis.
 errorExporting=Fehler beim Exportieren von ''{0}'' mit ID {1}
 errorLoadingMany=Fehler beim Laden von ''{0}''
 errorLoadingOne=Fehler beim Laden von ''{0}'' mit ID {1}
+errorReading=Fehler beim Einlesen von ''{0}''.
 errorReloading=Fehler beim Aktualisieren von ''{0}''
 errorRenaming=Fehler beim Umbenennen von {0}
 errorSaving=Fehler beim Speichern von ''{0}''
@@ -391,7 +392,6 @@ exportRus=Export Rus
 extendedSearch=Erweiterte Suche
 farbschema=Farbschema
 fehler=Fehler
-fehlerBeimEinlesen=Fehler beim Einlesen
 fehlerNichtAktualisierbar=Fehler beim Aktualisieren
 fehlerNichtLoeschbar=Die Daten konnten nicht gel\u00F6scht werden.
 fehlerNichtSpeicherbar=Die Daten konnten nicht gespeichert werden.
