--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -369,6 +369,7 @@ errorDirectoryDeleting=''{0}'' directory could not be deleted.
 errorExporting=Error exporting ''{0}'' with ID {1}
 errorLoadingMany=Error loading ''{0}''
 errorLoadingOne=Error loading ''{0}'' with ID {1}
+errorReading=Error while reading from ''{0}''.
 errorReloading=Error reloading ''{0}''
 errorRenaming=Error renaming {0}
 errorSaving=Error saving ''{0}''
@@ -391,7 +392,6 @@ exportRus=Export Rus
 extendedSearch=Extended Search
 farbschema=Colour scheme
 fehler=Error
-fehlerBeimEinlesen=error while reading
 fehlerNichtAktualisierbar=Error, could not update
 fehlerNichtLoeschbar=Data cannot be deleted.
 fehlerNichtSpeicherbar=Data cannot be saved.
