Fix duplicates in ImportZentralblatt

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -370,6 +370,8 @@ errorDirectoryDeleting=Fehler beim L\u00F6schen von ''{0}'' Verzeichnis.
 errorExporting=Fehler beim Exportieren von ''{0}'' mit ID {1}
 errorLoadingMany=Fehler beim Laden von ''{0}''
 errorLoadingOne=Fehler beim Laden von ''{0}'' mit ID {1}
+errorParsingFile=Parsingfehler: verschiedene {0} in der Datei ('{1}' & '{2}').
+errorParsingName="Parsingfehler: Vorname nicht mit Komma vom Nachnamen getrennt ('" {0} "')".
 errorReading=Fehler beim Einlesen von ''{0}''.
 errorReloading=Fehler beim Aktualisieren von ''{0}''
 errorRenaming=Fehler beim Umbenennen von {0}
