--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -370,6 +370,8 @@ errorDirectoryDeleting=''{0}'' directory could not be deleted.
 errorExporting=Error exporting ''{0}'' with ID {1}
 errorLoadingMany=Error loading ''{0}''
 errorLoadingOne=Error loading ''{0}'' with ID {1}
+errorParsingFile=Error parsing: various {0} in the file ('{1}' & '{2}').
+errorParsingName="Error parsing: First name not separated by comma from last name ('" {0} "')".
 errorReading=Error while reading from ''{0}''.
 errorReloading=Error reloading ''{0}''
 errorRenaming=Error renaming {0}
