Add resizing and collapsing features to metadata and comment area

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -186,6 +186,7 @@ childElement=Kindelement
 close=Schlie\u00DFen
 colorScheme=Farbschema
 columnCount=Spaltenz\u00E4hlung
+comments=Kommentare
 configurationChanged=Einstellungen ge\u00E4ndert
 configurationFile=Konfigurationsdatei
 configurationOPAC=OPAC Konfiguration
