--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -185,6 +185,7 @@ childElement=Child element
 close=close
 colorScheme=Color scheme
 columnCount=Column counting
+comments=Comments
 configurationChanged=Configuration changed
 configurationFile=Configuration file
 configurationOPAC=OPAC configuration
