Fix desing code smells

--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -271,6 +271,7 @@ close=close
 colorScheme=Color scheme
 configurationChanged=Configuration changed
 configurationFile=Configuration file
+configurationOPAC=OPAC configuration
 configurationSaving=Saving configuration...
 confirmNewPassword=Confirm new password
 contentLoeschen=Delete content
