--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -271,6 +271,7 @@ close=Schlie\u00DFen
 colorScheme=Farbschema
 configurationChanged=Einstellungen ge\u00E4ndert
 configurationFile=Konfigurationsdatei
+configurationOPAC=OPAC Konfiguration
 configurationSaving=Konfiguration wird gespeichert...
 confirmNewPassword=Neues Passwort best\u00E4tigen
 contentLoeschen=Content l\u00F6schen
