implemented authority checking on Ldap-group page

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -523,9 +523,10 @@ ldapKonfigurationSchreiben=LDAP-Konfiguration schreiben
 ldapWritten=LDAP Konfiguration erfolgreich geschrieben f\u00FCr\:
 # ldapgroupSaving is used in ldapgroupEdit.xhtml - line 39
 ldapgroupSaving=LDAP-Gruppe wird gespeichert...
-ldapgruppe=LDAP-Gruppe
-ldapgruppeBearbeiten=LDAP-Gruppe bearbeiten
-ldapgruppen=LDAP-Gruppen
+ldapgroup=LDAP-Gruppe
+ldapgroupEdit=LDAP-Gruppe bearbeiten
+ldapgroupView=LDAP-Gruppe anzeigen
+ldapgroups=LDAP-Gruppen
 ldaplogin=LDAP login
 lebenszeichen=Letzte Aktion vor\:
 letzteAktualisierungDurch=Letzte Aktualisierung durch
@@ -563,7 +564,7 @@ metadataDurchschnitt=Metadaten Durchschnitt
 metadataFileNotFound=Metadaten-Datei existiert nicht\:
 metadataGesamt=Metadaten gesamt
 metadataGroups=Metadatengruppen
-metadataNotAllowed={0} {1} sind im neuen Element {2} nicht zul‰ssig.
+metadataNotAllowed={0} {1} sind im neuen Element {2} nicht zul√§ssig.
 metadatenBearbeiten=Metadaten bearbeiten
 metadatenBetrachten=Metadaten betrachten
 metadatenBildAnzeigen=Bild anzeigen
