--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -522,9 +522,10 @@ ldapKonfigurationSchreiben=Write LDAP configuration
 ldapWritten=LDAP configuration successfully written for user\: ????
 # ldapgroupSaving is used in ldapgroupEdit.xhtml - line 39
 ldapgroupSaving=Saving LDAP group...
-ldapgruppe=LDAP group
-ldapgruppeBearbeiten=Edit LDAP group
-ldapgruppen=LDAP groups
+ldapgroup=LDAP group
+ldapgroupEdit=Edit LDAP group
+ldapgroupView=View LDAP group
+ldapgroups=LDAP groups
 ldaplogin=LDAP login
 lebenszeichen=Last action before\:
 letzteAktualisierungDurch=Last updated by
