updated secured urls in security config

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -522,11 +522,11 @@ laufzettelDrucken=Laufzettel drucken
 ldapKonfigurationSchreiben=LDAP-Konfiguration schreiben
 ldapWritten=LDAP Konfiguration erfolgreich geschrieben f\u00FCr\:
 # ldapgroupSaving is used in ldapgroupEdit.xhtml - line 39
-ldapgroupSaving=LDAP-Gruppe wird gespeichert...
-ldapgroup=LDAP-Gruppe
-ldapgroupEdit=LDAP-Gruppe bearbeiten
-ldapgroupView=LDAP-Gruppe anzeigen
-ldapgroups=LDAP-Gruppen
+ldapGroupSaving=LDAP-Gruppe wird gespeichert...
+ldapGroup=LDAP-Gruppe
+ldapGroupEdit=LDAP-Gruppe bearbeiten
+ldapGroupView=LDAP-Gruppe anzeigen
+ldapGroups=LDAP-Gruppen
 ldaplogin=LDAP login
 lebenszeichen=Letzte Aktion vor\:
 letzteAktualisierungDurch=Letzte Aktualisierung durch
