--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -521,11 +521,11 @@ laufzettelDrucken=Print docket
 ldapKonfigurationSchreiben=Write LDAP configuration
 ldapWritten=LDAP configuration successfully written for user\: ????
 # ldapgroupSaving is used in ldapgroupEdit.xhtml - line 39
-ldapgroupSaving=Saving LDAP group...
-ldapgroup=LDAP group
-ldapgroupEdit=Edit LDAP group
-ldapgroupView=View LDAP group
-ldapgroups=LDAP groups
+ldapGroupSaving=Saving LDAP group...
+ldapGroup=LDAP group
+ldapGroupEdit=Edit LDAP group
+ldapGroupView=View LDAP group
+ldapGroups=LDAP groups
 ldaplogin=LDAP login
 lebenszeichen=Last action before\:
 letzteAktualisierungDurch=Last updated by
