Add gallery to metadata editor

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -191,6 +191,7 @@ configurationChanged=Einstellungen ge\u00E4ndert
 configurationFile=Konfigurationsdatei
 configurationOPAC=OPAC Konfiguration
 configurationSaving=Konfiguration wird gespeichert...
+confirm=Diese Aktion kann einige Zeit dauern. Sind Sie sicher, dass Sie fortfahren m\u00F6chten?
 confirmDelete=L\u00F6schen best\u00E4tigen
 confirmDeleteClient=Mandant l\u00F6schen?
 confirmDeleteDocket=Laufzettel l\u00F6schen?
@@ -392,6 +393,7 @@ formConfigurationMismatch=Unstimmige Formularkonfiguration\:
 from=von
 gallery=Galerie
 generate=Generieren
+generatePNGs=PNGs generieren
 gesamtesTrefferset=Gesamtes Trefferset
 gesamtesTreffersetInMeinHomeverzeichnis=Gesamtes Trefferset in mein Homeverzeichnis laden
 getNormDataRecord=laden
@@ -450,7 +452,7 @@ imageNumber=Bildnummer
 imagePaginationError=Es wurden {1} Bilder gefunden, aber {0} Bilder erwartet. Bitte \u00FCberpr\u00FCfen Sie die Paginierung.
 imageSelection=Datei ausw\u00E4hlen
 imageVisualization=Bildanzeige
-images=Images
+images=Bilder
 imagesDurchschnitt=Images Durchschnitt
 imagesGesamt=Images gesamt
 imagesRead=Images lesen
