--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -190,6 +190,7 @@ configurationChanged=Configuration changed
 configurationFile=Configuration file
 configurationOPAC=OPAC configuration
 configurationSaving=Saving configuration...
+confirm=This operation may take some time. Are you sure you want to continue?
 confirmDelete=Confirm delete
 confirmDeleteClient=Delete client?
 confirmDeleteDocket=Delete docket?
@@ -390,6 +391,7 @@ formConfigurationMismatch=Form configuration mismatch\:
 from=from
 gallery=Gallery
 generate=Generate
+generatePNGs=Generate PNGs
 gesamtesTrefferset=All hits
 gesamtesTreffersetInMeinHomeverzeichnis=Put all hits in my home directory
 getNormDataRecord=load
