Translate and move correction messages

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -40,10 +40,6 @@ Import\ /\ Lieferung\ der\ russischen\ Metadaten=Import / Lieferung der russisch
 Import\ der\ Zentralblatt-Metadaten=Import der Zentralblatt-Metadaten
 InvalidIdentifierCharacter=Der Wert des Identifiers {0} im Strukturelement {1} enth\u00E4lt ung\u00FCltige Zeichen.
 InvalidIdentifierSame=Der Wert des Identifiers {0} enth\u00E4lt die gleichen Werte in {1} und {2}.
-Korrektur\ durchgefuehrt=Korrektur durchgef\u00FChrt
-Korrektur\ notwendig=Korrektur notwendig
-KorrekturFuer=Korrektur f\u00FCr Schritt
-KorrekturloesungFuer=Korrekturl\u00F6sung f\u00FCr Schritt
 Language=Sprache
 mapping=ElasticSearch Mapping
 MassDownloadProjectCreationError=Der Projektordner {0} kann nicht erstellt werden.
@@ -258,8 +254,12 @@ configurationOPAC=OPAC Konfiguration
 configurationSaving=Konfiguration wird gespeichert...
 confirmNewPassword=Neues Passwort best\u00E4tigen
 copy=Kopie
+correctionFor=Korrektur f\u00FCr Schritt
 correctionK=K
+correctionNecessary=Korrektur notwendig
+correctionPerformed=Korrektur durchgef\u00FChrt
 correctionReportProblem=Korrekturmeldung an vorherige Aufgabe konnte nicht gemeldet werden!
+correctionSolutionFor=Korrekturl\u00F6sung f\u00FCr Schritt
 correctionSolveProblem=Korrekturl\u00F6sung konnte nicht an folgende Aufgabe gemeldet werden!
 couldNotCreateImageFolder=Das Verzeichnis f\u00FCr die Images konnte nicht angelegt werden
 count=Anzahl
