--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -40,10 +40,6 @@ Import\ /\ Lieferung\ der\ russischen\ Metadaten=Import / delivery of Russian me
 Import\ der\ Zentralblatt-Metadaten=Import of Zentralblatt metadata
 InvalidIdentifierCharacter=The value of the identifier {0} of the structural element {1} contains invalid characters.
 InvalidIdentifierSame=The value of the identifier {0} contains the same values in {1} and {2}.
-Korrektur\ durchgefuehrt=Correction performed
-Korrektur\ notwendig=correction required
-KorrekturFuer=Correction for step
-KorrekturloesungFuer=Correction done for step
 Language=Language
 mapping=ElasticSearch mapping
 MassDownloadProjectCreationError=The project folder {0} could not be created.
@@ -256,8 +252,12 @@ configurationOPAC=OPAC configuration
 configurationSaving=Saving configuration...
 confirmNewPassword=Confirm new password
 copy=copy
+correctionFor=Correction for step
 correctionK=C
+correctionNecessary=correction required
+correctionPerformed=Correction performed
 correctionReportProblem=Correction issue message to previous task could not be reported!
+correctionSolutionFor=Correction done for step
 correctionSolveProblem=Solution of correction could not be reported!
 couldNotCreateImageFolder=Image folder could not be created
 count=Count
