Replace fehler with error

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -335,6 +335,7 @@ err_fallBackMessage=Es gab einen Fehler in der Programmausf\u00FChrung. <br/> Le
 err_linkText=Hier geht es zur\u00FCck auf die <a href\="{0}">Kitodo-Startseite</a>, evtl. m\u00FCssen Sie sich dort neu einloggen.
 err_noMailService=Die M\u00F6glichkeit von hier aus das Entwicklungsteams durch email zu benachrichtigen ist ausgeschaltet
 err_subjectLine=Kitodo Anwendungsfehler
+error=Fehler...
 error.IOException=Es trat ein Lese- oder Schreibfehler auf.
 error.SAXException=Die XML-Daten konnten nicht geparst werden. \u00DCberpr\u00FCfen Sie, ob die Datei wohlgeformt ist.
 error.TransformerException=Bei der Umwandlung in XML trat ein Fehler auf.
@@ -370,7 +371,6 @@ exportPdf=Export der Images zusammen mit den Metadaten als PDF-Datei in das Home
 exportRus=Export Rus
 extendedSearch=Erweiterte Suche
 farbschema=Farbschema
-fehler=Fehler
 feld=Feld
 fileDownload=Datei herunterladen
 fileExists=Eine Datei mit dem Namen {0} existiert bereits. Daher kann diese Datei nicht hochgeladen werden.
