--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -333,6 +333,7 @@ err_fallBackMessage=There has been a program execution error. <br/> Unfortunatel
 err_linkText=You may ignore the stack trace and continue your work with a click <a href\="{0}">here</a>.<br/>If this doesn't work you may have to use the navigation or even restart the application by logging out and back in. zzz
 err_noMailService=The feature to notify the development team by email from here is disabled.
 err_subjectLine=Kitodo application error
+error=Error...
 error.IOException=An I/O exception of some sort has occurred.
 error.SAXException=Basic error while parsing the XML data. You may want to check the file for being well-formed.
 error.TransformerException=An exceptional condition occurred during the transformation process to XML.
@@ -368,7 +369,6 @@ exportPdf=Export images with metadata as PDF file to home directory
 exportRus=Export Rus
 extendedSearch=Extended Search
 farbschema=Colour scheme
-fehler=Error
 feld=Field
 fileDownload=Download file
 fileExists=A file with the name {0} already exists. Therefore, this file can not be uploaded.
