Replace correction messages

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -254,8 +254,13 @@ configurationOPAC=OPAC Konfiguration
 configurationSaving=Konfiguration wird gespeichert...
 confirmNewPassword=Neues Passwort best\u00E4tigen
 copy=Kopie
+correction=Korrektur
 correctionFor=Korrektur f\u00FCr Schritt
 correctionK=K
+correctionMessageSend=Korrekturmeldung senden
+correctionMessageSendAllTasks=Korrekturmeldung f\u00FCr alle Schritte senden
+correctionMessageSendCurrentTask=Korrekturmeldung f\u00FCr aktuellen Schritt senden
+correctionMessageSendPreviousTask=Korrekturmeldung an vorherige Station senden
 correctionNecessary=Korrektur notwendig
 correctionPerformed=Korrektur durchgef\u00FChrt
 correctionReportProblem=Korrekturmeldung an vorherige Aufgabe konnte nicht gemeldet werden!
@@ -477,15 +482,9 @@ insertIntoPagination=In Paginierungssequenz einf\u00FCgen
 internesSpeicherformat=Internes Speicherformat
 isInUse=befindet sich in Bearbeitung durch
 istAktiv=Benutzerkonto aktiv
-istTemplate=Ist eine Vorlage
 keinProjektAngegeben=Kein Projekt angegeben
 keinTitelAngegeben=Kein Titel angeben
 keineLdapgruppeAngegeben=Keine LDAPgruppe angegeben
-korrektur=Korrektur
-korrekturmeldungAnVorherigeStationSenden=Korrekturmeldung an vorherige Station senden
-korrekturmeldungSenden=Korrekturmeldung senden
-korrekturmeldungSendenForAll=Korrekturmeldung f\u00FCr alle Schritte senden
-korrekturmeldungSendenSingle=Korrekturmeldung f\u00FCr aktuellen Schritt senden
 langLaufendeAufgaben=Lang laufende Aufgaben
 languageUserInterface=Sprache f\u00FCr Nutzeroberfl\u00E4che
 lastPage=Als letzte Seite einf\u00FCgen
