--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -252,9 +252,14 @@ configurationOPAC=OPAC configuration
 configurationSaving=Saving configuration...
 confirmNewPassword=Confirm new password
 copy=copy
+correction=Correction
 correctionFor=Correction for step
 correctionK=C
-correctionNecessary=correction required
+correctionMessageSend=Send correction message
+correctionMessageSendAllTasks=send correction message to all tasks
+correctionMessageSendCurrentTask=send correction message to current task
+correctionMessageSendPreviousTask=Send correction message to previous task
+correctionNecessary=Correction required
 correctionPerformed=Correction performed
 correctionReportProblem=Correction issue message to previous task could not be reported!
 correctionSolutionFor=Correction done for step
@@ -474,15 +479,9 @@ insertIntoPagination=Paste to pagination sequence
 internesSpeicherformat=Internal file format
 isInUse=is in use of
 istAktiv=is active
-istTemplate=is template
 keinProjektAngegeben=no project specified
 keinTitelAngegeben=No title defined
 keineLdapgruppeAngegeben=No LDAP group defined
-korrektur=correction
-korrekturmeldungAnVorherigeStationSenden=Send correction message to previous task
-korrekturmeldungSenden=Send correction message
-korrekturmeldungSendenForAll=send correction message to all steps
-korrekturmeldungSendenSingle=send correction message to current step
 langLaufendeAufgaben=Long-running tasks
 languageUserInterface=Language for user interface
 lastPage=Insert as last page
